# nginx-ide

./: README.md
cmake/: CMakeLists.txt
cmake/nginx/: CMakeLists.txt
cmake/nginx-rtmp-module/: CMakeLists.txt
